--- a/src/app/signals/signals.component.html
+++ b/src/app/signals/signals.component.html
@@ -1,7 +1,7 @@
 <h1>Signals (Change Detection when data change)</h1>
 
 <div id="counter">
-  <p id="counter-output">Counter: {{ counter }}</p>
+  <p id="counter-output">Counter: {{ counter() }}</p>
   <div id="counter-btns">
     <button (click)="decrement()">Decrement</button>
     <button (click)="increment()">Increment</button>
@@ -10,5 +10,5 @@
 
 <h2>Action Log</h2>
 <ol id="log">
-  <li *ngFor="let action of actions">{{ action }}</li>
+  <li *ngFor="let action of actions()">{{ action }}</li>
 </ol>
