--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+body {
+  margin: 3rem;
+  background-color: #323131;
+  color: #f5f3f3;
+}
+
+a {
+  text-decoration: none;
+  color: #b499f9;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #a382f7;
+}
+
+nav {
+  margin: 1rem 0;
+}
+
+main {
+  max-width: 45rem;
+  margin: 2rem auto;
+}
+
+.header {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
