--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header>
   <nav>
     <ul class="header">
-      <li><a routerLink="/home">Home</a></li>
       <li><a routerLink="/welcome">Welcome</a></li>
-      <li><a routerLink="/dashboard">Dashboard</a></li>
-      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/home/dashboard">Dashboard</a></li>
+      <li><a routerLink="/home/about">About</a></li>
     </ul>
   </nav>
 </header>
